# batadase

./: Cargo.toml  README.md  publish.rs
index/: Cargo.toml
index/src/: lib.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: assoc_poly_table.rs  assoc_table.rs  env.rs  error.rs  index.rs  index_poly_table.rs  index_table.rs  lib.rs  lmdb.rs  poly_table.rs  prelude.rs  table.rs  transaction.rs
src/lmdb/: error.rs
