[package]
name = "batadase"
version = "1.0.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/GRDigital/batadase"
description = "batadase is an incredible LMDB wrapper"
authors = ["GR Digital <contact@grdigital.co.uk>"]
readme = "README.md"

[dependencies]
batadase-index = "1"
batadase-macros = "1"
enumflags2 = "0.7"
fehler = "1"
futures = "0.3"
libc = "0.2"
lmdb-sys = { version = "0.11", package = "lmdb-sys2" }
log = "0.4"
once_cell = "1"
rkyv = { version = "0.8", features = ["bytecheck"] }
semver = "1"
serde = { version = "1", features = ["derive"] }
shrinkwraprs = "0.3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }

# [patch.crates-io]
# batadase-index = { path = "index" }
# batadase-macros = { path = "macros" }

[lints]
workspace = true
