[package]
name = "batadase"
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GRDigital/batadase"
description = "batadase is an incredible LMDB wrapper"
authors = ["Zygo Media <contact@zygomedia.com>"]
readme = "README.md"

[dependencies]
batadase-index = "2"
batadase-macros = "2"
enumflags2 = "0.7"
culpa = "1"
libc = "0.2"
lmdb-sys = { version = "0.11", package = "lmdb-sys2" }
log = "0.4"
rkyv = { version = "0.8", features = ["bytecheck", "unaligned", "alloc"], default-features = false }
thiserror = "1"
tokio = { version = "1", features = ["sync", "rt"], default-features = false }

# [patch.crates-io]
# batadase-index = { path = "index" }
# batadase-macros = { path = "macros" }

# [lints]
# workspace = true
