[package]
name = "batadase-index"
version = "1.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GRDigital/batadase"
description = "batadase is an incredible LMDB wrapper"
authors = ["GR Digital <contact@grdigital.co.uk>"]
readme = "../README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
shrinkwraprs = "0.3"
rkyv = "0.7"

[lints]
workspace = true
