[package]
name = "batadase-index"
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GRDigital/batadase"
description = "batadase is an incredible LMDB wrapper"
authors = ["Zygo Media <contact@zygomedia.com>"]
readme = "../README.md"

[dependencies]
rkyv = "0.8"
serde = { version = "1", features = ["derive"] }
shrinkwraprs = "0.3"

# [lints]
# workspace = true
