[package]
name = "batadase-macros"
version = "2.0.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/GRDigital/batadase"
description = "batadase is an incredible LMDB wrapper"
authors = ["Zygo Media <contact@zygomedia.com>"]
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-quote = "0.4"
syn = "2"

[lints]
workspace = true
